examples/test/testpolicy2841.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2841
  namespace: namespace205
spec:
  podSelector:
    matchLabels:
      key24: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value16
          key47: value5
      podSelector:
        matchLabels:
          key38: value4
          key6: value23
          key35: value28
